tests/ui/issues/issue-24682.stderr
error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-24682.rs:5:11
   |
LL | /           N=
LL | |           Self::N> {
   | |_________________^ associated item constraint not allowed here

error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-24682.rs:11:13
   |
LL |            <N=()>
   |             ^^^^ associated item constraint not allowed here

error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-24682.rs:15:13
   |
LL |         u32<N=()>
   |             ^^^^ associated item constraint not allowed here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0229`.
